log
Thu 28 Mar 2024 09:38:30 PM UTC: 
 tests:  0|6
total_score: 0/70
e9ed321
Thu 28 Mar 2024 09:43:35 PM UTC: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
221542d
Thu 28 Mar 2024 09:45:01 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:47:5: error: expected ‘;’ before ‘return’
   47 |     return NULL;
      |     ^~~~~~
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9df7e0b
Thu 28 Mar 2024 09:45:44 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   43 |   if (list == NULL || list->head == NULL)
      |   ^~
list.c:47:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   47 |     return list.head->data;
      |     ^~~~~~
list.c:47:16: error: ‘list’ is a pointer; did you mean to use ‘->’?
   47 |     return list.head->data;
      |                ^
      |                ->
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
63ff70e
Thu 28 Mar 2024 09:45:58 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   43 |   if (list == NULL || list->head == NULL)
      |   ^~
list.c:46:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   46 |     return list->head->data;
      |     ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
28cd62c
Thu 28 Mar 2024 09:47:35 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
7eec559
Thu 28 Mar 2024 09:50:42 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
416a354
Thu 28 Mar 2024 09:51:07 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
0bf7b79
Thu 28 Mar 2024 09:52:30 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
886df65
Thu 28 Mar 2024 09:54:03 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
db0e450
Thu 28 Mar 2024 09:58:07 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  9|3
total_score: 35/70
ffc0eb7
Thu 28 Mar 2024 09:58:33 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
9d0921d
Thu 28 Mar 2024 09:59:46 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
4ab3bf0
Thu 28 Mar 2024 10:00:43 PM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
4a7d771
Thu 28 Mar 2024 10:04:13 PM UTC: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:95:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   95 |     return NULL;
      |            ^~~~
list.c:93:6: note: declared here
   93 | void pushCurrent(List * list, void * data) {
      |      ^~~~~~~~~~~
list.c:96:3: error: ‘newNode’ undeclared (first use in this function); did you mean ‘Node’?
   96 |   newNode = createNode(data);
      |   ^~~~~~~
      |   Node
list.c:96:3: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
16fbea3
Thu 28 Mar 2024 10:05:28 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:95:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   95 |     return NULL;
      |            ^~~~
list.c:93:6: note: declared here
   93 | void pushCurrent(List * list, void * data) {
      |      ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d032eca
Thu 28 Mar 2024 10:07:06 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
55422da
Thu 28 Mar 2024 10:13:18 PM UTC: 
 list.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:133:48: error: expected ‘;’ before ‘)’ token
  133 |     (list->current)->prev = list->current->prev);
      |                                                ^
      |                                                ;
list.c:132:3: error: this ‘else’ clause does not guard... [-Werror=misleading-indentation]
  132 |   else
      |   ^~~~
list.c:133:48: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘else’
  133 |     (list->current)->prev = list->current->prev);
      |                                                ^
list.c:133:48: error: expected statement before ‘)’ token
cc1: all warnings being treated as errors
Compilation failed
fbfeb03
Thu 28 Mar 2024 10:13:30 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
87a7472
Thu 28 Mar 2024 10:15:03 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
9fbe5af
Thu 28 Mar 2024 10:17:26 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
c39d212
Thu 28 Mar 2024 10:18:09 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
2348726
